<resources>
    <string name="app_name">PontonQuizApp</string>
    <string name="ponton_logo">ponton logo</string>
    <string name="aktualny_wynik">aktualny wynik:</string>
    <string name="separator">separator</string>
    <string name="logo_ponton_question">logo_ponton_question</string>
    <string name="poziom1">Poziom 1</string>
    <string name="pytanie_1">Pytanie 1</string>
    <string name="tre_pytania">Treść pytania</string>
    <string name="quiz">Quiz</string>
    <string name="o_nas">O nas</string>
    <string name="kontakt">Kontakt</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="ponton_page">ponton.org.pl</string>
    <string name="splash_screen_logo">splash_screen_logo</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mail">Mail:</string>
    <string name="ponton_mail">info@ponton.org.pl</string>
    <string name="knowlage_book">knowlage book</string>
</resources>
