<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuestionActivity"
    android:background="@drawable/gradient_background">

    <Button
        android:id="@+id/button_return"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_ponton_question"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_ponton_question"
        app:layout_constraintBottom_toBottomOf="@+id/button_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_return"
        app:srcCompat="@drawable/logo_ponton_question" />

    <TextView
        android:id="@+id/textView_levelInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/level_bar"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/poziom1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_ponton_question" />

    <TextView
        android:id="@+id/textView_questionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/question_bar"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/pytanie_1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_levelInfo" />

    <TextView
        android:id="@+id/textView_questionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_question"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/tre_pytania"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_questionCount" />

<!--    AnswerButtons-->

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_next_bad"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_questionValue">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <pl.org.ponton.pontonquizapp.questions.AnswerButton
                android:id="@+id/button_top_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/answer_button_top_left"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <pl.org.ponton.pontonquizapp.questions.AnswerButton
                android:id="@+id/button_top_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/answer_button_top_right"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <pl.org.ponton.pontonquizapp.questions.AnswerButton
                android:id="@+id/button_bottom_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/answer_button_bottom_left"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <pl.org.ponton.pontonquizapp.questions.AnswerButton
                android:id="@+id/button_bottom_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/answer_button_bottom_right"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>